Fix alignment issue

--- a/src/components/ui/PlanDetailsTable/index.scss
+++ b/src/components/ui/PlanDetailsTable/index.scss
@@ -78,7 +78,6 @@
         letter-spacing: 0.2px;
         display: block;
         padding: 0 40px;
-        white-space: nowrap;
 
         .per {
           font-weight: normal;
@@ -119,12 +118,13 @@
       }
 
       .copay {
-        display: flex;
         @media screen and (min-width: 320px) and (max-width: 480px) {
+          display: flex;
           flex-direction: column;
         }
         .label {
           margin-right: 4px;
+          padding: 0;
         }
         .supply {
           letter-spacing: -0.14px;
@@ -205,6 +205,10 @@
   }
   .comp-td:not(:first-child) {
     padding-left: 15px;
+    padding-right: 8px;
+  }
+  .extra-padding {
+    padding-left: 20px;
   }
 }
 
